--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">LiveVehicleTrackerDemo</string>
+
+    <string name="start_location_et_hint">Enter starting address</string>
+    <string name="end_location_et_hint">Enter ending address</string>
+
+    <string name="start_nav_but_text">Start Navigation</string>
+    <string name="start_nav_google_map_but_text">Start Navigation using Google Map</string>
+
+    <string name="start_location_et_error">Please enter starting location</string>
+    <string name="end_location_et_error">Please enter ending location</string>
+
+    <string name="pick_starting_location_content_desc">Pick starting location</string>
+    <string name="pick_ending_location_content_desc">Pick ending location</string>
+
+    <string name="pick_location_btn_text">PICK LOCATION</string>
+    <string name="pick_location_btn_sub_text">Place pin on your exact current location</string>
+
+    <string name="loading_title">Loading...</string>
+    <string name="fetching_adress">Fetching Address...</string>
+    <string name="error_message">"Oops, something went wrong! Please try again"</string>
+<string name="error_retreiving_address_from_latLng">Unable to fetch location, please alter location</string>
 </resources>
