--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="start_location_et_error">Please enter starting location</string>
     <string name="end_location_et_error">Please enter ending location</string>
 
+    <string name="reselect_start_location_et_error">Please re-enter starting location</string>
+    <string name="reselect_end_location_et_error">Please re-enter ending location</string>
+
     <string name="pick_starting_location_content_desc">Pick starting location</string>
     <string name="pick_ending_location_content_desc">Pick ending location</string>
 
@@ -19,5 +22,9 @@
     <string name="loading_title">Loading...</string>
     <string name="fetching_adress">Fetching Address...</string>
     <string name="error_message">"Oops, something went wrong! Please try again"</string>
-<string name="error_retreiving_address_from_latLng">Unable to fetch location, please alter location</string>
+    <string name="error_retreiving_address_from_latLng">Unable to fetch location, please alter location</string>
+
+    <string name="android_location_permissions_denied_chat">You need to grant Location permission to track you current location</string>
+    <string name="action_settings">Settings</string>
+    <string name="app_permission_denied_user_clarification_msg">Location Permission is necessary to show routes</string>
 </resources>
